# SPA_site_nuxtjs

./: main.py  pyproject.toml
myproject/: db.sqlite3
myproject/myapp/: forms.py  models.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py  0002_remove_post_tag_post_tag.py  0003_comment.py
myproject/myapp/static/css/: style.css
myproject/myapp/templates/myapp/: base.html  contact.html  home.html  post_detail.html  search.html  signin.html  signup.html  success.html
myproject/myapp/templates/myapp/block/: comments.html  footer.html  navbar.html  search_form.html
myproject/myproject/: settings.py  urls.py
myproject/templates/: signin.html
